-----------
v5.0.20-git
-----------

[mms] Fix internal storage of date searches (Bug #11109).
[mms] Fix regression in sending PGP encrypted messages (Bug #11085).
[mms] Only poll mailboxes in dynamic view that exist in the browser folder
      tree.
[mms] Fix regression in displaying From address on mailbox page in traditional
      view.
[mms] Fix updating the compose address fields when using the contacts popup.


-------
v5.0.19
-------

[jan] Fix setting default values for identity preferences.
[mms] Improve drag performance of elements in dynamic view.
[mms] Fix saving initial_page preference.
[mms] Workaround broken Thunderbird encrypted S/MIME messages.
[mms] Fix regression where passphrase prompt would not appear for S/MIME
      encrypted messages.
[mms] Fix regression in verifying signed & encrypted S/MIME messages (Bug
      #10947).
[mms] Fix reloading the folder list in the dynamic view (Bug #10769).
[mms] Fix deleting messages from Virtual Trash.
[mms] Fix regression in displaying PGP Armored signed/encrypted messages (Bug
      #10926).
[mms] Catch IMAP server connection errors in traditional mailbox view.
[mms] Fix purging moved messages from dynamic mailbox view if deleted messages
      are visible in the mailbox (Bug #10916).
[mms] Fix message advancing when deleting messages in traditional view when
      deleted messages are visible in the mailbox.


-------
v5.0.18
-------

[mms] SECURITY: Fix XSS vulnerabilities on the compose page (traditional
      view), the contacts popup window, and with certain IMAP mailbox names.
[mms] Fix updating context menu when a mailbox is converted into a container
      element after being deleted.
[mms] Fix expand/collapse of folder tree in mobile view.
[mms] Fix regression preventing sending of MDNs.
[mms] Fix reporting as innocent in mobile view.
[mms] Fix updating log information when replying/forwarding in dynamic view.
[mms] Fix deleting virtual folders in dynamic view.


-------
v5.0.17
-------
