@@ -2,6 +2,8 @@
 v5.0.20-git
 -----------
 
+[mms] Ensure that PGP & S/MIME signed message bodies are not altered after the
+      signature is calculated (Bug #11058).
 [mms] Fix internal storage of date searches (Bug #11109).
 [mms] Fix regression in sending PGP encrypted messages (Bug #11085).
 [mms] Only poll mailboxes in dynamic view that exist in the browser folder
